💄 Prevent collection pages from being too narrow

--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -21,6 +21,9 @@ body
   margin 0
   font-weight 100
 
+main
+  min-width 75vw
+
 h1
   font-size min(7.5vmin, 2rem)
   text-align center
